style.css
body{
    font-family: 'Overpass', sans-serif; 
}
.nav, .text {
    font-family: 'Overpass', sans-serif;

}

html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,
samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,
td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
    font-family: 'Overpass', sans-serif;
}


.navbar-font{
    font-size: 1.4em;
}

.nav-link {
    color: inherit;
    color: #404040;
}

.text-active {
    color: inherit;
}

ul.nav a:hover{
    color: #666362;
}

.img-mid {
    display: flex;
    justify-content: center;
    align-items: center;
}

.img-gal-size {
    width: 100%;
    height: 250px;
}

.img-distance, .img-distance2 {
    margin-bottom: 2%;
    padding: 10px
}

.distance {
    margin-bottom: 4%;
    padding: 20px;
}

.image {
    margin-top: 70px;
}

.navbar-nav {
    width: 100%;
    text-align: center;
}

.navbar-nav > li {
    float: none;
    display: inline-block;
}

.bg-nav {
    background: white;
}

/*
.bg-website {
    background-image: url(./donlot/496171-pink_hair-anime_girls-katana-sword-yellow_eyes-snow-748x421.jpg);
    background-repeat: no-repeat;
    position: fixed;
    width: 100%;
    height: 100%;
    background-size: 100%;
}
*/


.inspiration {
    position: relative;
    overflow: hidden;
}

.inspiration, .ins-img {
    margin-bottom: 1.85714286em;
}

.rounded-circle {
   width: 160px;
   height: 160px;
}

section, .space--sm {
    padding-top: 4.95238095em;
    padding-bottom: 4.95238095em;
}

.bg--secondary {
    background: #fafafa;
    border-top: 1px solid hidden #ebebeb;

}

.lead {
    font-weight: 400;
    color: #808080;
    font-size: 1.35714286em;
    line-height: 1.68421053em;
}

